--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ numpy==2.2.3
 streamlit==1.42.0
 scikit-learn==1.6.1
 xgboost==2.1.4
-joblib==1.4.28
+# joblib==1.4.28
+joblib==1.1.0
 markdown-it-py==3.0.0
 mdurl==0.1.2
 pygments==2.19.1
