--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 pandas==2.2.3
 numpy==2.2.3
 streamlit==1.42.0
-scikit-learn==1.6.1
+# scikit-learn==1.6.1
+# scikit-learn==1.0.2
+# joblib==1.1.0
 xgboost==2.1.4
 # joblib==1.4.28
 joblib==1.1.0
